
lib_LTLIBRARIES = libAtlasCodecs.la

libAtlasCodecs_la_LDFLAGS = -version-info @ATLAS_INTERFACE_VERSION_INFO@

libAtlasCodecsincludedir = $(includedir)/Atlas/Codecs

libAtlasCodecs_la_SOURCES = \
	Packed.cc \
	Packed.h \
	XML.cc \
	XML.h \
	Utility.h

libAtlasCodecsinclude_HEADERS = XML.h Packed.h Utility.h
