
lib_LTLIBRARIES = libAtlasMessage.la

libAtlasMessage_la_LDFLAGS = $(INTERFACE_VERSION)

libAtlasMessageincludedir = $(includedir)/Atlas/Message

libAtlasMessage_la_SOURCES = \
	Object.cc Encoder.cc DecoderBase.cc QueuedDecoder.cc

libAtlasMessageinclude_HEADERS = \
	Object.h Layer.h Encoder.h DecoderBase.h QueuedDecoder.h
