SUBDIRS = .

lib_LTLIBRARIES = libAtlasObjectsEntity.la

libAtlasObjectsEntity_la_LDFLAGS = $(INTERFACE_VERSION)

libAtlasObjectsEntityincludedir = $(includedir)/Atlas/Objects/Entity

libAtlasObjectsEntity_la_SOURCES = \
	Entity.cc

libAtlasObjectsEntityinclude_HEADERS = \
	Account.h Admin.h AdminEntity.h Game.h \
	GameEntity.h Player.h RootEntity.h
