SUBDIRS = .

lib_LTLIBRARIES = libAtlasObjectsOperation.la

libAtlasObjectsOperation_la_LDFLAGS = -version-info @ATLAS_INTERFACE_VERSION_INFO@

libAtlasObjectsOperationincludedir = $(includedir)/Atlas/Objects/Operation

libAtlasObjectsOperation_la_SOURCES = \
        Operation.cc

libAtlasObjectsOperationinclude_HEADERS = \
        Action.h Appearance.h Combine.h Communicate.h Create.h Delete.h \
        Disappearance.h Divide.h Error.h Feel.h Get.h Imaginary.h Info.h \
        Listen.h Login.h Logout.h Look.h Move.h Perceive.h Perception.h \
        RootOperation.h Set.h Sight.h Smell.h Sniff.h Sound.h Talk.h Touch.h
